bin_PROGRAMS = gsph0 streamSerialTests netMsgSerialTest DataStreamTest



streamSerialTests_SOURCES = \
	../tests/streamSerialTests.cxx

streamSerialTests_LDADD = \
	../GE/libge.la



DataStreamTest_SOURCES = \
	../tests/DataStreamTest.cxx

DataStreamTest_LDADD = \
	../GE/libge.la



netMsgSerialTest_SOURCES = \
	../tests/netMsgSerialTest.cxx

netMsgSerialTest_LDADD = \
	../GE/libge.la \
	../GeometryService/libgs.la

gsph0_SOURCES = \
	../GeometryService/gsph0.cxx

gsph0_LDADD = \
	../GE/libge.la \
	../GeometryService/libgs.la
